# mountain-bikers-club

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  diesel.toml  pre_build.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  security-report.md
.github/workflows/: deploy.yml
migrations/2020-09-27-170907_create_trips/: down.sql  up.sql
migrations/2020-10-23-183919_create_users/: down.sql  up.sql
migrations/2020-11-01-152141_create_trips_users/: down.sql  up.sql
migrations/2020-11-06-195716_create_comments/: up.sql
migrations/2020-11-12-063524_add_trips_metadata/: down.sql  up.sql
migrations/2020-11-30-211712_create_invitations/: up.sql
migrations/2020-12-18-165516_create_followers/: down.sql  up.sql
src/: comments.rs  main.rs  models.rs  schema.rs  utils.rs
src/trips/: mod.rs
src/trips/api/: mod.rs  post_delete.rs  post_gpx.rs  post_join.rs  post_new.rs  post_reconsider.rs  post_update.rs
src/trips/pages/: trip.rs
src/users/: mod.rs  utils.rs
src/users/api/: get_logout.rs  get_validate.rs  mod.rs  post_avatar.rs  post_follow.rs  post_login.rs  post_new.rs  post_search.rs  post_update.rs
src/users/pages/: user.rs
templates/: dashboard.html  index.html  layout.html  trip.html
templates/errors/: 404.html
templates/macros/: form_join.html  form_trip.html  form_trip_datetime.html  navigation.html  user_column.html  user_menu.html
templates/pages/: features.html  join.html  login.html  new.html  pricing.html
templates/user/: activity.html  followers.html  following.html  overview.html  trips.html
web/: robots.txt
web/scripts/: main.js
web/scripts/components/: address-map.js  current-timezone.js  date-time.js  dynamic-username.js
web/scripts/plugins/: leaflet-fullscreen.js
web/styles/: main.css
