[package]
name = "mountain_bikers_club"
version = "0.1.0"
authors = ["Cédric Eberhardt <hello+code@cedeber.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-identity = "0.3.1"
actix-multipart = "0.3.0"
actix-session = "0.4.0"
actix-web = "3.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
data-encoding = "2.3.1"
diesel = { version = "1.4.5", features = ["postgres", "serde_json", "uuidv07", "chrono", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8.2"
futures = "0.3.8"
geo = "0.16.0"
geojson = "0.21.0"
geo-types = "0.6.2"
gpx = { git = "https://github.com/georust/gpx", branch = "master" }
image = "0.23.12"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
onig = "6.1.1"
r2d2 = "0.8.9"
reqwest = { version = "0.10.10", features = ["json"] }
ring = "0.16.19"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
tera = "1.6.1"
time = "0.2.23"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
