[package]
name = "mountain_bikers_club"
version = "0.1.0"
authors = ["Cédric Eberhardt <hello+code@cedeber.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-identity = "0.3.1"
actix-multipart = "0.3.0"
actix-session = "0.4.0"
actix-web = "3.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
data-encoding = "2.3.2"
diesel = { version = "1.4.5", features = ["postgres", "serde_json", "uuidv07", "chrono", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.13"
geo = "0.17.1"
geojson = "0.22.0"
geo-types = "0.7.1"
gpx = { git = "https://github.com/cedeber/gpx", branch = "master" }
image = "0.23.13"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
onig = "6.1.1"
r2d2 = "0.8.9"
reqwest = { version = "0.11.1", features = ["json"] }
ring = "0.16.20"
rusoto_core = "0.45.0" # Keep 0.45 with actix v3 because of tokio usage < v1
rusoto_s3 = "0.45.0" # Keep 0.45 with actix v3 because of tokio usage < v1
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
tera = "1.6.1"
time = "0.2.25"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
